[modify] page update

--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -81,7 +81,7 @@
     "sl": {
       "title": "鋼捲分條線",
       "phase1": "Slitting Line",
-      "phase2": "主要功能為依訂單需求將鋼捲分條為各種不同寬度尺寸之窄幅鋼捲"
+      "phase2": "主要功能為依訂單需求將鋼捲分條為各種不同寬度尺寸之窄幅鋼捲。"
     }
   },
   "company": {
