[modify] update page

--- a/src/locales/eng.json
+++ b/src/locales/eng.json
@@ -206,7 +206,7 @@
     "viewJobs": "Review of Human Resource Needs"
   },
   "contact": {
-    "heading": "Dear Customers, Should you have any inquiries or interests, please fill out the form below or call our service hotline at +886-7-757-988. We will do our best to assist you!",
+    "heading": "Dear Customers, Should you have any inquiries or interests, please fill out the form below or call our service hotline at +886-7-9757988. We will do our best to assist you!",
     "title": "Contact and Inquiry",
     "name": "Name",
     "company": "Company/Organization",
