--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -206,7 +206,7 @@
     "viewJobs": "检视人力资源需求"
   },
   "contact": {
-    "heading": "亲爱的顾客您好，若您有任何需求或兴趣，我们诚挚地邀请您填写以下表单，或拨打服务专线:+886-7-757-988 我们将尽力为您解答!",
+    "heading": "亲爱的顾客您好，若您有任何需求或兴趣，我们诚挚地邀请您填写以下表单，或拨打服务专线:+886-7-9757988 我们将尽力为您解答!",
     "title": "联系询价",
     "name": "姓名",
     "company": "公司/单位",
