--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -206,7 +206,7 @@
     "viewJobs": "檢視人力資源需求"
   },
   "contact": {
-    "heading": "親愛的顧客您好，若您有任何需求或興趣，我們誠摯地邀請您填寫以下表單，或撥打服務專線:+886-7-757-988 我們將盡力為您解答!",
+    "heading": "親愛的顧客您好，若您有任何需求或興趣，我們誠摯地邀請您填寫以下表單，或撥打服務專線:+886-7-9757988 我們將盡力為您解答!",
     "title": "聯絡詢價",
     "name": "姓名",
     "company": "公司/單位",
