--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -105,9 +105,9 @@
     },
     "contact": {
       "title": "远龙不锈钢股份有限公司",
-      "phase1": "业务类型：OEM制造商出口商/代理批发商增值经销商",
+      "phase1": "业务类型：专业外销出口制造商",
       "phase2": "主要产品: 300 及 400系列不锈钢",
-      "phase3": "ISO和/或其他安全/质量认证：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JQA JIS G4305、BIS IS 6911"
+      "phase3": "ISO和/或其他安全/质量认证：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JIS MARK、BIS IS 6911、CNS MARK"
     }
   },
   "quality":{
@@ -142,14 +142,14 @@
       "iso45001": "ISO 45001：2018职业安全卫生管理系统",
       "cns45001_1": "TOSHMS CNS 45001：2018台湾职业卫生管理系统",
       "cns45001_2": "TOSHMS CNS 45001：2018台湾职业卫生管理系统",
-      "iso14001": "ISO 14001  2015版(20220729-20250721)_环境管理系统",
+      "iso14001": "ISO 14001：2015 环境管理系统",
       "iso14064": "ISO 14064-1：2018温室气体查验声明书",
       "iso14067": "ISO 14067：2018碳足迹查证声明书",
       "iso17025": "ISO/IEC 17025：2017；CNS17025：2018 实验室认证证书",
       "iatf16949": "IATF 16949：2016汽车质量管理系统验证",
-      "bis-is-6911": "印度BIS证书",
+      "bis-is-6911": "BIS MARK",
       "cns8499": "正字标记CNS 8679号",
-      "jis4305": "JIS MARK G4305 产品认证",
+      "jis4305": "JIS MARK",
       "cns17025": "ISO/IEC 17025：2017；CNS17025：2018 实验室认证证书",
       "iso14046_ch": "ISO 14046：2014水足迹查证声明书",
       "iso14046_en": "ISO 14046：2014水足迹查证声明书"
