--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -105,9 +105,9 @@
     },
     "contact": {
       "title": "遠龍不銹鋼股份有限公司",
-      "phase1": "業務類型：OEM製造商出口商/代理批發商增值經銷商",
+      "phase1": "業務類型：專業外銷出口製造商",
       "phase2": "主要產品: 300 及 400系列不銹鋼",
-      "phase3": "ISO和/或其他安全/質量認證：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JQA JIS G4305、BIS IS 6911"
+      "phase3": "ISO和/或其他安全/質量認證：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JIS MARK、BIS IS 6911、CNS MARK"
     }
   },
   "quality":{
@@ -142,14 +142,14 @@
       "iso45001": "ISO 45001：2018職業安全衛生管理系統",
       "cns45001_1": "TOSHMS CNS 45001：2018台灣職業衛生管理系統",
       "cns45001_2": "TOSHMS CNS 45001：2018台灣職業衛生管理系統",
-      "iso14001": "ISO 14001  2015版(20220729-20250721)_環境管理系統",
+      "iso14001": "ISO 14001：2015 環境管理系統",
       "iso14064": "ISO 14064-1：2018溫室氣體查驗聲明書",
       "iso14067": "ISO 14067：2018碳足跡查證聲明書",
       "iso17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
       "iatf16949": "IATF 16949：2016汽車品質管理系統驗證",
-      "bis-is-6911": "印度BIS證書",
+      "bis-is-6911": "BIS MARK",
       "cns8499": "正字標記CNS 8679號",
-      "jis4305": "JIS MARK G4305 產品認證",
+      "jis4305": "JIS MARK",
       "cns17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
       "iso14046_ch": "ISO 14046：2014水足跡查證聲明書",
       "iso14046_en": "ISO 14046：2014水足跡查證聲明書"
