[modify] simplify home section

--- a/src/locales/eng.json
+++ b/src/locales/eng.json
@@ -38,8 +38,8 @@
       "content_4": "Our goal is to achieve net-zero emissions by 2050 as CSR for sustainability"
     },
     "feature6": {
-      "title": "ISO 9001, JIS mark and IATF 16949 Quality Policy",
-      "content_1": "We fully implement standards such as ISO 9001, JIS Q1001, and IATF 16949 to structure our quality management system, enhancing our expertise in stainless steel and improving service quality. We commit to continuous improvement, aiming to enhance product quality and achieve customer satisfaction. We pledge to set quality goals according to our quality policy and implement improvement measures based on customer and legal requirements to continuously enhance our quality management system.",
+      "title": "Quality Policy",
+      "content_1": "",
       "btn": "Learn More"
     }
   },
