--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -38,8 +38,8 @@
       "content_4": "目标2050年实现净零排放，实践企业永续发展愿景"
     },
     "feature6": {
-      "title": "ISO 9001、JIS mark及IATF 16949 质量政策",
-      "content_1": "我们全面执行ISO 9001、JIS Q1001及IATF 16949等相关作业标准来构建质量管理系统，以提升不锈钢专业能力及服务质量，并落实持续改进精神提升质量与生产力，达到客户满意的水平。 我们承诺会依据质量政策建立质量目标，并在符合客户及法规要求基础上，进行各项改进措施以持续改进质量管理系统。",
+      "title": "质量政策",
+      "content_1": "",
       "btn": "Learn More"
     }
   },
