--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -38,8 +38,8 @@
       "content_4": "目標2050年實現淨零排放，實踐企業永續發展願景"
     },
     "feature6": {
-      "title": "ISO 9001、JIS mark及IATF 16949 品質政策",
-      "content_1": "我們全面執行ISO 9001、JIS Q1001、及IATF 16949等相關作業標準來架構品質管理系統，以提升不銹鋼專業能力及服務品質，並落實持續改善精神提升品質與生產力，達到顧客滿意的水準。我們承諾會依據品質政策建立品質目標，並在符合顧客及法令要求基礎下，進行各項改善措施以持續改善品質管理系統。",
+      "title": "品質政策",
+      "content_1": "",
       "btn": "Learn More"
     }
   },
