[modify] update page file

--- a/src/locales/eng.json
+++ b/src/locales/eng.json
@@ -107,7 +107,7 @@
       "title": "Yuan Long Stainless Steel Corp.",
       "phase1": "Business Types ： Manufacturer & Exporter",
       "phase2": "Main Products: 300 and 400 series stainless steel",
-      "phase3": "ISO and/or other safety/quality certifications: ISO 9001, ISO 50001, ISO 45001, ISO 14001, ISO 14064, ISO 14067, CNS 45001, ISO/IEC 17025, IATF 16949, JIS MARK, BIS IS 6911, CNS MARK"
+      "phase3": "ISO and/or other safety/quality certifications: ISO 9001, ISO 50001, ISO 45001, ISO 14001, ISO 14064, ISO 14067, CNS 45001, ISO/IEC 17025, IATF 16949, JIS MARK, BIS MARK, CNS MARK"
     }
   },
   "quality":{
