--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -107,7 +107,7 @@
       "title": "远龙不锈钢股份有限公司",
       "phase1": "业务类型：专业外销出口制造商",
       "phase2": "主要产品: 300 及 400系列不锈钢",
-      "phase3": "ISO和/或其他安全/质量认证：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JIS MARK、BIS IS 6911、CNS MARK"
+      "phase3": "ISO和/或其他安全/质量认证：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JIS MARK、BIS MARK、CNS MARK"
     }
   },
   "quality":{
