--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -107,7 +107,7 @@
       "title": "遠龍不銹鋼股份有限公司",
       "phase1": "業務類型：專業外銷出口製造商",
       "phase2": "主要產品: 300 及 400系列不銹鋼",
-      "phase3": "ISO和/或其他安全/質量認證：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JIS MARK、BIS IS 6911、CNS MARK"
+      "phase3": "ISO和/或其他安全/質量認證：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JIS MARK、BIS MARK、CNS MARK"
     }
   },
   "quality":{
